--- a/client/src/index.html
+++ b/client/src/index.html
@@ -17,7 +17,7 @@
   <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#5bbad5">
   <link rel="shortcut icon" href="/assets/icons/favicon.ico">
   <meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
-  <meta name="theme-color" content="#ff0000">
+  <meta name="theme-color" content="#3f51b5">
 
 </head>
 <body class="ee-app-background">
